[package]
name = "xurl"
version = "0.1.0"
authors = ["Sebastien Quioc <sebastien.quioc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
log = "0.4.14"
stderrlog = "0.5.1"
url = "2.2.2"
urlencoding = "1.3.3"
idna = "0.2.3"
