[package]
name = "xurl"
version = "0.1.0"
authors = ["Sebastien Quioc <sebastien.quioc@protonmail.com>"]
description = "A command-line utility to manipulate urls"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
categories = ["command-line-utilities", "encoding"]
repository = "https://https://github.com/squioc/xurl"
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
log = "0.4.14"
stderrlog = "0.5.1"
url = "2.2.2"
urlencoding = "1.3.3"
idna = "0.2.3"
